	internal: added const at various places.
	internal: removed some unused variables.
	internal: used time_t in tai_now.c.
	internal: used stdlib.h in alloc.c.
	api: split dns_domain_suffix() into suffix(), suffixpos().
	internal: switched to buffer_unix*.
	internal: included unistd.h for various declarations.
20010103
	ui: increased maximum data size from 512 bytes to 32767 bytes in
		tinydns, tinydns-get, axfrdns. allows big TXT records.
	ui: dnsmx reformats name when it prints an artificial 0 MX.
20010105
	ui: increased MAXLEVEL to 5. the Internet is becoming more
		glueless every day.
20010106
	version: djbdns 1.03.
20010113
	ui: increased MAXALIAS to 16.
	ui: dnscache no longer caches SERVFAIL. per-ip is obviously the
		way to go.
	ui: tinydns et al. now respond FORMERR to non-Internet-class
		queries.
	ui: tdlookup now returns A records in a random order in the
		answer section, and truncates the list after 8 records.
	ui: tinydns-data skips lines starting -.
20010114
	internal: documented the tinydns data.cdb format.
	ui: tinydns-data, tinydns, tinydns-get, axfrdns support client
		differentiation.
	ui: dnsqr aborts if it is given an extra argument.
20010117
	ui: dnstracesort removes duplicate lines.
	ui: dnstracesort prints glue.
	ui: dnstrace uses a ``start'' IP address for the root glue.
20010121
	version: djbdns 1.04.
20010206
	internal: response_query() takes a class argument.
	internal: query_start() takes a class argument.
	internal: packetquery() takes a class argument.
	ui: tinydns et al., axfrdns, and dnscache repeat qclass * in
		response to bogus * queries. tnx Mike Batchelor.
	ui: axfrdns rejects queries for weird classes.
	ui: axfrdns uses query ID instead of ID 0 in the series of AXFR
		response messages between the SOAs, to support the AXFR
		client in BIND 9.
	ui: axfrdns sets AA in the series of AXFR response messages.
20010211
	ui: servers print starting message.
	internal: some respond() declarations.
	version: djbdns 1.05.