@@ -1,1 +1,1 @@
-djbdns 1.05-ma1
+djbdns 1.05-pmo
