@@ -1,0 +1,2 @@
+/* sysdep: +sigaction */
+#define HASSIGACTION 1
